--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: Blog
+title: David Zhang's Blog
 author: David Zhang
-description: My first blog
+description: to share, to improve! 
